[tool.poetry]
name = "Rangekeeper"
version = "0.1.0"
description = "A Python library assisting financial modelling in scenario planning, decision-making, cashflow forecasting, and the like"
authors = ["Daniel Fink <danfink@mit.edu>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
aenum = "^3.1.11"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
Pint = "^0.19.2"
pyxirr = "^0.7.2"
scipy = "^1.8.1"
networkx = "^2.8.4"
py-moneyed = "^2.0"
python-dateutil = "^2.8.2"
py-linq = "^1.3.0"
tabulate = "^0.8.10"
rich = "^12.4.4"
PyYAML = "^6.0"
specklepy = "^2.7.2"
numba = "^0.55.2"
protobuf = "^4.21.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
