[tool.poetry]
name = "Rangekeeper"
version = "0.1.0"
description = "A Python library assisting financial modelling in scenario planning, decision-making, cashflow forecasting, and the like"
authors = ["Daniel Fink <danfink@mit.edu>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
aenum = "^3.1.11"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
Pint = "^0.20.1"
pyxirr = "^0.7.3"
scipy = "^1.10.0"
networkx = "^3.0"
py-moneyed = "^3.0"
python-dateutil = "^2.8.2"
py-linq = "^1.4.0"
tabulate = "^0.9.0"
PyYAML = "^6.0"
specklepy = "^2.12.0"
numba = "^0.56.4"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
jupyter-book = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
