[tool.poetry]
name = "Rangekeeper"
version = "0.4.3-alpha"
description = "A Python library assisting financial modelling in scenario planning, decision-making, cashflow forecasting, and the like"
authors = ["Daniel Fink <danfink@mit.edu>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
aenum = "^3.1.11"
matplotlib = "^3.7.0"
pandas = "^2.0.1"
Pint = "^0.20.1"
pyxirr = "^0.9.0"
scipy = "^1.11.2"
networkx = "^3.0"
py-moneyed = "^3.0"
python-dateutil = "^2.8.2"
py-linq = "^1.4.0"
tabulate = "^0.9.0"
PyYAML = "^6.0"
specklepy = "^2.16.0"
numba = "^0.57.0"
jupyter = "^1.0.0"
#jupyterlab = "^4.0.5"
docutils = "0.17.1" # See https://jupyterbook.org/en/stable/content/citations.html#citations-and-bibliographies
tqdm = "^4.65.0"
multiprocess = "^0.70.14"
seaborn = "^0.12.2"
jupyter-book = "^0.15.1"
sphinx-rtd-theme = "^1.2.0"
pyvis = "^0.3.2"
plotly = "^5.15.0"
pyppeteer = "^1.0.2"
ghp-import = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
