[tool.poetry]
name = "Rangekeeper"
version = "0.7.6"
description = "A Python library assisting financial modelling in real estate asset & development planning, decision-making, cashflow forecasting, and scenario analysis."
authors = ["Daniel Fink <danfink@mit.edu>"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
matplotlib = "^3.10"
pandas = "^2.2"
pint = "^0.24"
pyxirr = "^0.10"
scipy = "^1.14"
networkx = "^3.3"
py-moneyed = "^3.0"
tabulate = "^0.9"
specklepy = "^2.21"
numba = "^0.61"
multiprocess = "^0.70"
seaborn = "^0.13"
pyvis = "^0.3"
plotly = "^6.0"
aenum = "^3.1"
numpy-financial = "^1.0"
black = "^25.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
