[project]
name = "Rangekeeper"
version = "0.8.37"
description = "A Python library assisting financial modelling in real estate asset & development planning, decision-making, cashflow forecasting, and scenario analysis."
authors = [
    { name = "Daniel Fink", email = "danfink@mit.edu" }
]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.10, <3.13"

dependencies = [
    "matplotlib>=3.10",
    "pandas>=2.2",
    "pint>=0.24",
    "pyxirr>=0.9",
    "scipy>=1.12",
    "networkx>=3.1",
    "py-moneyed>=3.0",
    "tabulate>=0.9",
    "specklepy>=2.21",
    "numba>=0.61",
    "multiprocess>=0.70.18",
    "seaborn>=0.13",
    "pyvis>=0.3.2",
    "plotly>=6.0",
    "aenum>=3.0",
    "numpy-financial>=1.0",
    "pytest>=8.0",
    "black>=25.0",
]

[tool.ruff.format]
preview = true  # Uses Black's experimental formatting rules

