[project]
name = "RangekeeperWalkthrough"
version = "0.1"
description = "Walthrough documentation of the Rangekeeper library (https://github.com/daniel-fink/rangekeeper)"
authors = ["Daniel Fink <danfink@mit.edu>"]
license = "MPL-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ghp-import>=2.1",
    "jupyter>=1.1",
    "jupyter-book< 2.0",
    "notebook>=7.5",
    "pandas-stubs>=2.3",
    "plotly>=6.5",
    "rangekeeper>=0.8",
    "scipy-stubs>=1.16",
]
